tests/snapshots/examples_fixtures/type_system__failing__41_effect_alias_now_ms_in_io_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `now_ms`.

  examples/type_system/failing/41_effect_alias_now_ms_in_io_function.flx:4:13
  |
4 |     let n = now_ms
  |             ^^^^^^

Hint:
  Define it first: let now_ms = ...;

Help:
  Did you mean `n`?
== stdout ==
<not executed>
